# rasp0w

./: .gitignore  README.md  config.py  display.py  env.example  main.py  pyproject.toml  requirements.txt
lib/: __init__.py
plugins/: __init__.py  base.py  date_time.py  weather.py
