[tool.poetry]
name = "rasp0w"
version = "0.1.0"
description = ""
authors = ["rkjar <rkjar@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
numpy = "^1.24.2"
rpi-gpio = "^0.7.1"
spidev = "^3.6"
load-dotenv = "^0.1.0"
requests = "^2.28.2"
pytz = "^2022.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
